--- a/docs/ESL-Solution/6-Kernel-Smoothing-Methods/ex6-07.md
+++ b/docs/ESL-Solution/6-Kernel-Smoothing-Methods/ex6-07.md
@@ -18,11 +18,8 @@ toc: false
 		\hat{\mathbf{f}} = \bb{S}_\lambda \bb{y} \non
 	\end{equation}
 	
-    where $\{\bb{S}_\lambda\}_{ij} = l_i(x_j)$ for $l_i(x)$ defined by (6.8) in the text. Then by Ex. \ref{ex:7.3} we know
+    where $\{\bb{S}_\lambda\}_{ij} = l_i(x_j)$ for $l_i(x)$ defined by (6.8) in the text. Then by [Ex. 7.3](../7-Model-ASsessment-and-Selection/ex7-03.md) we know
 	
     \begin{equation}
 		y_i - \hat f^{-i}(x_i) = \frac{y_i - \hat f(x_i)}{1-\{\bb{S}_\lambda\}_{ii}}.\non
 	\end{equation}
-
-!!! warning "TODO"
-    Add Ex. 7.3 and fix the reference above.
