--- a/docs/ESL-Solution/6-Kernel-Smoothing-Methods/ex6-10.md
+++ b/docs/ESL-Solution/6-Kernel-Smoothing-Methods/ex6-10.md
@@ -24,19 +24,16 @@ toc: false
     is unbiased.
 
 ??? done "Soln. 6.10"
-    The proof follows directly from Ex. 7.4 and Ex. 7.5 for general linear smoother. Specifically, by Ex. 7.4, we know 
+    The proof follows directly from [Ex. 7.4](../7-Model-ASsessment-and-Selection/ex7-04.md) and [Ex. 7.5](../7-Model-ASsessment-and-Selection/ex7-05.md) for general linear smoother. Specifically, by [Ex. 7.4](../7-Model-ASsessment-and-Selection/ex7-04.md), we know 
 	
     \begin{equation}
 		\text{PE}(\lambda) = \text{ASR}(\lambda) + \frac{2}{N}\sum_{i=1}^N\text{Cov}(\hat y_i, y_i)\non
 	\end{equation}
 	
-    and from Ex. 7.5 we have
+    and from [Ex. 7.5](../7-Model-ASsessment-and-Selection/ex7-05.md) we have
 	
     \begin{equation}
 		\sum_{i=1}^N\text{Cov}(\hat y_i, y_i) = \text{trace}(\bb{S}_\lambda)\sigma^2.\non
 	\end{equation}
 	
     Then the proof is straightforward.
-
-??? warning "TODO"
-    Add Ex 7.4-7.5 and fix the reference above.
