--- a/docs/ESL-Solution/9-Additive-Models-and-Trees/ex9-1.md
+++ b/docs/ESL-Solution/9-Additive-Models-and-Trees/ex9-1.md
@@ -9,7 +9,7 @@ toc: false
 ---
 
 ???+ question "Ex. 9.1"
-    Show that a smoothing spline fit of $y_i$ to $x_i$ preserves the \emph{linear part} of the fit.
+    Show that a smoothing spline fit of $y_i$ to $x_i$ preserves the *linear part* of the fit.
 	In other words, if $y_i = \hat y_i + r_i$, where $\hat y_i$ represents the linear regression fits, and 
 	$\bb{S}$ is the smoothing matrix, then $\bb{S}\bb{y} = \boldsymbol{\hat y} + \bb{S}\bb{r}$. Show that the same is true for local linear regression (Section 6.1.1). Hence argue that the adjustment step in the second line of (2) in Algorithm 9.1 is unnecessary.
 
