reorg image files

--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-02.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-02.md
@@ -44,7 +44,7 @@ toc: false
 
     Note that the confidence region from the first method is expected to be wider than that from the second method. The reason is that the region from the first method is a *simultaneous confidence region*, that is, each of the coordinate $\beta_i$ falls into the region with the given probability. While the one from the second is an *elliptical confidence region*, it's less strict than the simultaneous one thus it's narrower. This is also observed from Figure 1 below.
 
-    ![](../../img/chp3/Ex3-2.PNG)
+    ![](../../img/Ex3-2.PNG)
     <center>*Figure 1: Confidence Regions from Two Different Methods*</center>
 
     Figure 1 is drawn from a numerical simulation experiment. In the simulation we first draw 10 values, $\{x_i, i=1,...,10\}$ ,uniformly from $[0,1]$. Then we generate
