--- a/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-03.md
+++ b/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-03.md
@@ -14,7 +14,7 @@ toc: false
 ??? done "Soln. 5.3" 
     Figure 1 is a reproduced version. We sample 50 points, $x_i$, uniformly from $[0,1]$ and let i.i.d. error terms $\epsilon_i\sim N(0, 0.01)$. The linear and cubic polynomial fits have two and four degrees of freedom, respectively, while the cubic spline and natural cubic spline each have six degrees of freedom. The cubic spline has two knots at 0.33 and 0.66, while the natural spline has boundary knots at 0.1 and 0.9, and four interior knots uniformly spaced between them.
 	
-	![](../../img/chp5/Ex5-3.PNG)
+	![](../../img/Ex5-3.PNG)
     <center>*Figure 1: Pointwise Variance Curves for Four Different Models*</center>
 
 ??? example "Code"
