--- a/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-05.md
+++ b/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-05.md
@@ -14,7 +14,7 @@ toc: false
 ??? done "Soln. 5.5" 
     We first try to reproduce lower panel of Figure 5.5 in the text. First we fit the raw data using a logistic regression as mentioned in the text. This will give us jagged gray curve. Second, to use natural cubic spline to *filter* input $p=256$ frequencies, we need to get the *basis matrix* $\bb{H}\in\mathbb{R}^{p\times 12}$ of natural cubic spline on integer set $\{1,2, ..., 256\}$ with degree of freedom 11. Then we replace original $\bX\in\mathbb{R}^{N\times p}$ with $\bX^\ast = \bX\bb{H}$, and fit a logistic regression using $\bX$. We obtain the fitted coefficients $\hat\beta$ and the red curve in the figure is simply recovered from $\bb{H}\hat\beta$. The reproduced version is Figure 1. The implementation details can be found below.
 
-	![](../../img/chp5/Ex5-5a.PNG)
+	![](../../img/Ex5-5a.PNG)
     <center>*Figure 1: Reproduce of Figure 5.5*</center>
 
 	What this exercise asks is, instead of using logistic regression, we need to use quadratic discriminant analysis (QDA) together with a 10-fold cross validation. We also need to choose five different internal knots sets, which can be done by choosing five different degree of freedoms and by defaults the knots are assumed to be uniformly placed over our frequency set. At the end, we choose the model with the best error rate. Table 1 displays the numerical results from our experiments. We see that when we have the lowest mean error rate with $\text{df}=11$.
