--- a/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-10.md
+++ b/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-10.md
@@ -39,13 +39,13 @@ toc: false
 
 	Next we reproduce Figure 5.9 in the text. Since smoothing splines has an explicit, finite-dimensional, unique minimizer which is a natural cubic spline with knots at the unique values of the $x_i$, we could use codes for natural cubic splines (I haven't found a convenient package for smoothing splines in Python yet.) 
 
-    ![](../../img/chp5/Ex5-10b.PNG)
+    ![](../../img/Ex5-10b.PNG)
     <center>*Figure 1: df=5*</center>
 	
-    ![](../../img/chp5/Ex5-10c.PNG)
+    ![](../../img/Ex5-10c.PNG)
     <center>*Figure 2: df=9*</center>
 	
-    ![](../../img/chp5/Ex5-10d.PNG)
+    ![](../../img/Ex5-10d.PNG)
     <center>*Figure 3: df=15*</center>
 
 ??? example "Code"
