--- a/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-1.md
+++ b/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-1.md
@@ -32,5 +32,5 @@ toc: false
 
 	Given $\eqref{eq:2-1b}$, it's straightforward to see that $\eqref{eq:2-1a}$ indeed holds.
 
-!!!note
+??? note
 	The assumption $\sum_{k=1}^K\hat y_k=1$ is actually not required.
