--- a/docs/ESL-Solution/_18-High-Dimensional-Problems/ex18-03.md
+++ b/docs/ESL-Solution/_18-High-Dimensional-Problems/ex18-03.md
@@ -18,7 +18,7 @@ toc: false
 		L(\bm{\beta}) &=& \sum_{i=1}^N\left[\sum_{k=1}^K\bb{1}(g_i=k)(\beta_{k0}+x_i^T\beta_k) - \log\left(\sum_{l=1}^K\exp(\beta_{l0}+x_i^T\beta_l)\right) - \frac{\lambda}{2}\sum_{k=1}^K\|\beta_k\|_2^2 \right].\non
 	\end{eqnarray}
 	
-    Taking first-order derivative w.r.t $\beta_k$ and set it to zero, we get 
+    Taking first-order derivative w.r.t $\beta_k$ and setting it to zero, we get 
 	
     \begin{eqnarray}
 		\frac{\partial L(\bm{\beta})}{\partial \beta_k} &=&\sum_{i=1}^N\left[x_i\bb{1}(g_i=k)-\frac{\exp(\beta_{k0}+x_i^T\beta_{k})}{\sum_{l=1}^K\exp(\beta_{l0}+x_i^T\beta_l)}\cdot x_i - \lambda \beta_k\right]\non\\
