--- a/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-13.md
+++ b/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-13.md
@@ -43,7 +43,4 @@ toc: false
 		y_i - \hat f^{(-i)}_\lambda(x_i) = \frac{y_i-\hat f_\lambda(x_i)}{1-S_\lambda(i,i)}.\non
 	\end{equation}
 	
-    It remains to prove $\eqref{eq:5-13leave}$. Intuitively, any reasonable smoother is constant preserving, which means $S_\lambda \bb{1} = \bb{1}$. Therefore, the rows of $S_\lambda$ sum to one. Thus if we want to use the same smoother with the $i$-th row and column deleted, we must re-normalize the rows to sum to one, that gives $\eqref{eq:5-13leave}$. For a rigorous proof, please see Exercise \ref{ex:7.3} (a).
-
-!!! warning "TODO"
-    Add Ex. 7.3 and change the reference here.
+    It remains to prove $\eqref{eq:5-13leave}$. Intuitively, any reasonable smoother is constant preserving, which means $S_\lambda \bb{1} = \bb{1}$. Therefore, the rows of $S_\lambda$ sum to one. Thus if we want to use the same smoother with the $i$-th row and column deleted, we must re-normalize the rows to sum to one, that gives $\eqref{eq:5-13leave}$. For a rigorous proof, please see [Ex. 7.3](../7-Model-Assessment-and-Selection/ex7-03.md) (a).
