--- a/docs/ESL-Solution/8-Model-Inference-and-Averaging/ex8-7.md
+++ b/docs/ESL-Solution/8-Model-Inference-and-Averaging/ex8-7.md
@@ -9,7 +9,7 @@ toc: false
 ---
 
 ???+ question "Ex. 8.7"
-    *EM as a minorization algorithm*(Hunter and Lange, 2004 \cite{hunter2004tutorial}; Wu and Lange, 2007 \cite{wu2010mm}). A function $g(x, y)$ to said to *minorize* a function $f(x)$ is
+    *EM as a minorization algorithm*([Hunter and Lange, 2004](https://doi.org/10.1198/0003130042836); Wu and Lange, 2007 \cite{wu2010mm}). A function $g(x, y)$ to said to *minorize* a function $f(x)$ is
 	
     \begin{equation}
 		g(x,y) \le f(x), \  g(x,x) = f(x)\non
