Fix a typo; add todo in Ex. 9.5

--- a/docs/ESL-Solution/9-Additive-Models-and-Trees/ex9-5.md
+++ b/docs/ESL-Solution/9-Additive-Models-and-Trees/ex9-5.md
@@ -43,7 +43,7 @@ toc: false
     Similar arguments apply to the general $m$, thus we guess the degrees of freedom is $m$. See \cite{ye1998measuring} for more details on generalized degrees of freedom (GDF).
 	
     (b) See Code below.
-	
+	!!! todo "The code and numbers below need revisit."
     (c) We estimated degrees of freedom to be 1, 5.73 and 10.66 respectively. See Code below.
 	
     (d) We see that our rough guess of degrees of freedom is close to but underestimate the ones obtained from simulations.
@@ -78,7 +78,7 @@ toc: false
         y_pred[:, i] = y_pred_cur
 
     df = 0
-    for i in range(y.shape[1]):
+    for i in range(y.shape[0]):
         df += np.cov(y[i, :], y_pred[i, :], ddof=0)[0][1]
 
     print('Estimated degrees of freedom with {} terminal nodes is: {}'.format(numLeaves, df))
