--- a/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-18.md
+++ b/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-18.md
@@ -50,4 +50,4 @@ toc: false
 		\int \psi_{nm}(x)x^ldx = 0,\ \  l=0,...,p-1.\non
 	\end{equation}
 
-	This means that every symmlet-$p$ wavelet basis function is orthogonal to all polynomials of degree less than $p$. Therefore we see the polynomials of degrees less than $p$ can be represented exactly by the finite linear combination of the scaling functions $\phi(x-k)$, which spans the \emph{reference} space $V_0$.
+	This means that every symmlet-$p$ wavelet basis function is orthogonal to all polynomials of degree less than $p$. Therefore we see the polynomials of degrees less than $p$ can be represented exactly by the finite linear combination of the scaling functions $\phi(x-k)$, which spans the *reference* space $V_0$.
