--- a/docs/ESL-Solution/6-Kernel-Smoothing-Methods/ex6-08.md
+++ b/docs/ESL-Solution/6-Kernel-Smoothing-Methods/ex6-08.md
@@ -50,4 +50,4 @@ toc: false
 	
     where $C(i)$ is the set of $X$'s such that the corresponding $Y$'s are in category $i$ and $N_i$ is the size of $C(i)$. Then it's easy to verify that $\eqref{eq:6-8a}$ holds.
 
-	Such estimate can be viewed as the combined kernel for the continuous component with the frequency for the discrete. We can further improve it by a smoothing over the estimate with respect to the discrete component $Y$ using a \emph{discrete window weight function} (see, e.g.,\cite{ahmad1994nonparametric}).
+	Such estimate can be viewed as the combined kernel for the continuous component with the frequency for the discrete. We can further improve it by a smoothing over the estimate with respect to the discrete component $Y$ using a *discrete window weight function* (see, e.g.,\cite{ahmad1994nonparametric}).
