--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-15.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-15.md
@@ -35,7 +35,7 @@ toc: false
 
     Note that $\hat\alpha_1 \propto \hat\varphi_1$ in Algorithm 3.3 in the text. 
 
-    The second canonical covariance variable, $\hat\alpha_2$, then has to maximize the same objective with additional constraint $\hat\alpha_2^T\bb{S}\hat\alpha_1=0$. It turns out 
+    The second canonical covariance variable, namely $\hat\alpha_2$, has to maximize the same objective with additional constraint $\hat\alpha_2^T\bb{S}\hat\alpha_1=0$. It turns out 
 
     \begin{equation}
     \label{eq:3-15a}
@@ -65,5 +65,5 @@ toc: false
                     && \alpha^T\bb{S}\hat\alpha_l = 0, \  l=1,...,m-1,\non
     \end{eqnarray}
 
-    where $r\in [0, 1).$ When $r =0$ we recover OLS, and when $r \ra 1$ we get PCR. The case when $r=1/2$ gives PLS. Note that this generalized regression is referred to as **continuum regression**. See \cite{stone1990continuum} for details.
+    where $r\in [0, 1).$ When $r =0$ we recover OLS, and when $r \ra 1$ we get PCR. The case when $r=1/2$ gives PLS. Note that this generalized regression is referred to as **continuum regression**. See paper [Continuum Regression and Ridge Regression](https://www.jstor.org/stable/2345877) for more details.
 
