--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-25.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-25.md
@@ -9,7 +9,7 @@ toc: false
 ---
 
 ???+ question "Ex. 3.25"
-    *LAR look-ahead* (Efron et al., 2004, Sec. 2 \cite{efron2004least}).} Starting at the beginning of the $k$th step of the LAR algorithm, derive expressions to identify the next variable to enter the active set at step $k+1$, and the value of $\alpha$ at which this occurs (using the notation around equation (3.55) on page 74).
+    *LAR look-ahead* (Efron et al., 2004, Sec. 2 [Least Angle Regression](https://statweb.stanford.edu/~tibs/ftp/lars.pdf)).} Starting at the beginning of the $k$th step of the LAR algorithm, derive expressions to identify the next variable to enter the active set at step $k+1$, and the value of $\alpha$ at which this occurs (using the notation around equation (3.55) on page 74).
 
 ??? done "Soln. 3.25"
     Suppose the next step of LAR algorithm update is 
@@ -59,4 +59,4 @@ toc: false
 		\hat\alpha = {\min_{j\in\mathcal{A}_k^c}}^+\Big\{\frac{\hat C - \textbf{x}_j^T\textbf{r}_k}{A-\textbf{x}_j^T\textbf{u}_k}, \frac{\hat C + \textbf{x}_j^T\textbf{r}_k}{A + \textbf{x}_j^T\textbf{u}_k}\Big\},
 	\end{equation}
 	
-    where indicates that the minimum is taken over only positive components within each choice of $j\in\mathcal{A}_k^c$. Note that $\eqref{eq:3-25d}$ here is the same as the formula (2.13) given in \cite{efron2004least}.
+    where indicates that the minimum is taken over only positive components within each choice of $j\in\mathcal{A}_k^c$. Note that $\eqref{eq:3-25d}$ here is the same as the formula (2.13) given in [Least Angle Regression](https://statweb.stanford.edu/~tibs/ftp/lars.pdf).
