--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-27.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-27.md
@@ -52,7 +52,7 @@ toc: false
             \hat\beta(\lambda) = \hat\beta(\lambda_0) - (\lambda-\lambda_0)\gamma_0.\non
         \end{equation}
     
-        Thus the lasso solution path is linear as $\lambda$ ranges from $\lambda_0$ to $\lambda_1$ (Efron et al., 2004 \cite{efron2004least}; Rosset and Zhu, 2007 \cite{rosset2007piecewise}).
+        Thus the lasso solution path is linear as $\lambda$ ranges from $\lambda_0$ to $\lambda_1$ (Efron et al., 2004 [Least Angle Regression](https://statweb.stanford.edu/~tibs/ftp/lars.pdf); Rosset and Zhu, 2007 [Piecewise linear regularized solution paths](https://projecteuclid.org/journals/annals-of-statistics/volume-35/issue-3/Piecewise-linear-regularized-solution-paths/10.1214/009053606000001370.full)}).
 
 ??? done "Soln. 3.27" 
     ??? done "(a)" 
