--- a/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-2.md
+++ b/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-2.md
@@ -46,7 +46,7 @@ toc: false
 	???+ question "(e)" 
 		Find the solution $\hat\beta_0$ (up to the same scalar multiple as in (c)), and hence the predicted value $\hat f(x) = \hat\beta_0 + x^T\hat\beta$. Consider the following rule: classify to class 2 if $\hat f(x) > 0$ and class 1 otherwise. Show this is not the same as the LDA rule unless the classes have equal numbers of observations.
 	 
-		(\cite{fisher1936use}, \cite{ripley2007pattern}) 
+		([The use of multiple measurements in taxonomic problems](https://onlinelibrary.wiley.com/doi/10.1111/j.1469-1809.1936.tb02137.x), [Pattern Recognition and Neural Networks](https://doi.org/10.1017/CBO9780511812651)) 
 
 ??? done "Soln. 4.2"
 	??? done "(a)" 
