--- a/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-6.md
+++ b/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-6.md
@@ -12,7 +12,7 @@ toc: false
     Suppose we have $N$ points $x_i$ in $\mathbb{R}^p$ in general position, with class labels $g_i\in\{-1,1\}$. Prove that the perceptron learning algorithm converges to a separating hyperplane in a finite number of steps:
 
 	* (a) Denote a hyperplane by $f(x) = \beta_1^Tx + \beta_0 = 0$ or in a more compact notation $\beta^Tx^\ast=0$, where $x^\ast = (x,1)$ and $\beta=(\beta_1, \beta_0)$. Let $z_i = x_i^\ast/\|x_i^\ast\|$. Show that separability implies the existence of a $\beta_{\text{sep}}$ such that $y_i\beta^T_{\text{sep}}z_i\ge 1\ \  \forall i$.
-	* (b) Given a current $\beta_{\text{old}}$, the perceptron algorithm identifies a point $z_i$ that is misclassified, and produces the update $\beta_{\text{new}}\leftarrow \beta_{\text{old}} + y_iz_i$. Show that $\|\beta_{\text{new}}-\beta_{\text{sep}}\|^2\le \|\beta_{\text{old}}-\beta_{\text{sep}}\|^2 - 1$, and hence that the algorithm converges to a separating hyperplane in no more than $\|\beta_{\text{start}}-\beta_{\text{sep}}\|^2$ steps \cite{ripley2007pattern}.
+	* (b) Given a current $\beta_{\text{old}}$, the perceptron algorithm identifies a point $z_i$ that is misclassified, and produces the update $\beta_{\text{new}}\leftarrow \beta_{\text{old}} + y_iz_i$. Show that $\|\beta_{\text{new}}-\beta_{\text{sep}}\|^2\le \|\beta_{\text{old}}-\beta_{\text{sep}}\|^2 - 1$, and hence that the algorithm converges to a separating hyperplane in no more than $\|\beta_{\text{start}}-\beta_{\text{sep}}\|^2$ steps （[Pattern Recognition and Neural Networks](https://doi.org/10.1017/CBO9780511812651)）.
 
 ??? done "Soln. 4.6"
     * (a) By definition of separability, there exists $\beta$ such that
