--- a/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-8.md
+++ b/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-8.md
@@ -9,7 +9,7 @@ toc: false
 ---
 
 ???+ question "Ex. 4.8"
-    Consider the multivariate Gaussian model $X|G=k \sim N(\mu_k, \bm{\Sigma})$, with the additional restriction that rank$\{\mu_k\}_1^K = L < \max(K-1,p).$ Derive the constrained MLEs for the $\mu_k$ and $\bm{\Sigma}$. Show that the Bayes classification rule is equivalent to classifying in the reduced subspace computed by LDA \cite{hastie1996discriminant}. 
+    Consider the multivariate Gaussian model $X|G=k \sim N(\mu_k, \bm{\Sigma})$, with the additional restriction that rank$\{\mu_k\}_1^K = L < \max(K-1,p).$ Derive the constrained MLEs for the $\mu_k$ and $\bm{\Sigma}$. Show that the Bayes classification rule is equivalent to classifying in the reduced subspace computed by LDA [Discriminant adaptive nearest neighbor classification](https://ieeexplore.ieee.org/document/506411). 
 
 ??? done "Soln. 4.8" 
     We are going to maximize
