--- a/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-8.md
+++ b/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-8.md
@@ -24,7 +24,7 @@ toc: false
 
     * (a) $\Sigma$ Known, $\mu_j$ Unknown.
   
-    In Section 12.5.2 of \cite{mardia1979}, a solution to $\eqref{eq:4.8loglikelihood}$ is given assuming that $\Sigma$ is known. This has the form of the usual LDA solution, except with $W$ replaced by $\bm{\Sigma}$. We can write the estimated means as 
+    In Section 12.5.2 of [Multivariate Analysis](https://www.elsevier.com/books/multivariate-analysis/mardia/978-0-08-057047-1), a solution to $\eqref{eq:4.8loglikelihood}$ is given assuming that $\Sigma$ is known. This has the form of the usual LDA solution, except with $W$ replaced by $\bm{\Sigma}$. We can write the estimated means as 
 
     \begin{equation}
 		\label{eq:4.8hatmuj}
@@ -39,7 +39,7 @@ toc: false
 
     * (b) $\mu_j$ Known, $\bm{\Sigma}$ Unknown.
 
-    Although the case $\mu_j$ known, $\bm{\Sigma}$ unknown is not explicitly stated in \cite{mardia1979}, we deduce (and easily check) from their equation (4.2.7) on p. 104 that
+    Although the case $\mu_j$ known, $\bm{\Sigma}$ unknown is not explicitly stated in [Multivariate Analysis](https://www.elsevier.com/books/multivariate-analysis/mardia/978-0-08-057047-1), we deduce (and easily check) from their equation (4.2.7) on p. 104 that
  
     \begin{equation}\label{eq:4.8hatsigam}
         \hat{\bm{\Sigma}} = W + \sum_{k=1}^K\frac{N_k}{N}(\bar x_k-\mu_k)(\bar x_k-\mu_k)^T.
