--- a/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-1.md
+++ b/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-1.md
@@ -25,12 +25,13 @@ toc: false
 	\begin{align}
 		\|t_k-\hat y\|^2 
 		&= (1-\hat y_k)^2 + \sum_{l \neq k }(0 - \hat y_l)^2\nonumber\\
-		&= (1-\hat y_k)^2 + \sum_{l \neq k }\hat y_l^2
+		&= (1-\hat y_k)^2 + \sum_{l \neq k }\hat y_l^2\nonumber\\
+		&= 1 - 2\hat y_k + \sum\hat y_l^2
 		\label{eq:2-1b}
 	\end{align}
 
 
-	Given $\eqref{eq:2-1b}$, it's straightforward to see that $\eqref{eq:2-1a}$ indeed holds.
+	Given $\eqref{eq:2-1b}$, it's straightforward to see that $\eqref{eq:2-1a}$ indeed holds because only $-2\hat y_k$ depends on $k$.
 
 ??? note "Remark"
 	The assumption $\sum_{k=1}^K\hat y_k=1$ is actually not required.
