--- a/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-2.md
+++ b/docs/ESL-Solution/2-Overview-of-Supervised-Learning/ex2-2.md
@@ -64,5 +64,10 @@ toc: false
         P(X=x|\text{BLUE})P(\text{BLUE}) = P(X=x|\text{ORANGE})P(\text{ORANGE}).\nonumber 
     \end{equation}
 
-    Note that in this example $P(\text{BLUE}) = P(\text{ORANGE}) = 1/2$,
-    recall $\eqref{eq:2-2blue}$ - $\eqref{eq:2-2organge}$, it's now easy to see how to calculate the Bayes decision boundary.
+    Note that in this example $P(\text{BLUE}) = P(\text{ORANGE}) = 1/2$, so we have 
+
+    \begin{equation}
+        P(X=x|\text{BLUE}) = P(X=x|\text{ORANGE}).\nonumber 
+    \end{equation}
+
+    Recall $\eqref{eq:2-2blue}$ - $\eqref{eq:2-2organge}$, it's now easy to see how to calculate the Bayes decision boundary.
