--- a/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-07.md
+++ b/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-07.md
@@ -9,7 +9,7 @@ toc: false
 ---
 
 ???+ question "Ex. 5.7"
-    *Derivation of smoothing splines* (Green and Silverman, 1994 \cite{green1993nonparametric}). Suppose that $N\ge 2$, and that $g$ is the natural cubic spline interpolant to the pairs ${x_i, z_i}_1^N$, with $a<x_1<\dots<x_N<b$. This is a natural spline with a knot at every $x_i$; being an $N$-dimensional space of functions, we can determine the coefficients such that it interpolates the sequence $z_i$ exactly. Let $\tilde g$ be any other differentiable function on $[a,b]$ that interpolates the $N$ pairs.
+    *Derivation of smoothing splines* ([Nonparametric Regression and Generalized Linear Models](https://www.routledge.com/Nonparametric-Regression-and-Generalized-Linear-Models-A-roughness-penalty/Green-Silverman/p/book/9780412300400)). Suppose that $N\ge 2$, and that $g$ is the natural cubic spline interpolant to the pairs ${x_i, z_i}_1^N$, with $a<x_1<\dots<x_N<b$. This is a natural spline with a knot at every $x_i$; being an $N$-dimensional space of functions, we can determine the coefficients such that it interpolates the sequence $z_i$ exactly. Let $\tilde g$ be any other differentiable function on $[a,b]$ that interpolates the $N$ pairs.
     ???+ question "(a)"
 	    Let $h(x) = \tilde g(x) - g(x)$. Use integration by parts and the fact that $g$ is a natural cubic spline to show that
 	    
