--- a/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-14.md
+++ b/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-14.md
@@ -98,4 +98,4 @@ toc: false
 	\end{equation}
 	
     !!! note "Remark"
-        It has been shown that $\sum_{j=1}^N\alpha_jx_j=0$ (see, e.g., \cite{david1996}) , however I don't see how to arrive that from here.
+        It has been shown that $\sum_{j=1}^N\alpha_jx_j=0$ (see, e.g., [Thin-Plate Splines](https://www.geometrictools.com/Documentation/ThinPlateSplines.pdf)) , however I don't see how to arrive that from here.
