--- a/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-18.md
+++ b/docs/ESL-Solution/3-Linear-Methods-for-Regression/ex3-18.md
@@ -8,10 +8,10 @@ weight: 12
 toc: false
 ---
 ???+ question "Ex. 3.18"
-    Read about conjugate gradient algorithms (Murray et al., 1981, for example)\cite{gill2019practical}, and establish a connection between these algorithms and partial least squares.
+    Read about conjugate gradient algorithms (Murray et al., 1981, for example) [Practical Optimization](https://epubs.siam.org/doi/book/10.1137/1.9781611975604?mobileUi=0&), and establish a connection between these algorithms and partial least squares.
 
 ??? done "Soln. 3.18" 
-    We briefly review the conjugate gradient algorithm described in Murray et al., 1981. The conjugate-gradient method described in Section 4.8.3.1 in \cite{gill2019practical} can be applied to minimize the quadratic function $c^T + \frac{1}{2}x^TGx$, where $G$ is symmetric and positive definite, it computes the solution of the system
+    We briefly review the conjugate gradient algorithm described in Murray et al., 1981. The conjugate-gradient method described in Section 4.8.3.1 in [Practical Optimization](https://epubs.siam.org/doi/book/10.1137/1.9781611975604?mobileUi=0&) can be applied to minimize the quadratic function $c^T + \frac{1}{2}x^TGx$, where $G$ is symmetric and positive definite, it computes the solution of the system
 
     \begin{equation}
         Gx = -c.\non
