--- a/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-19.md
+++ b/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-19.md
@@ -11,7 +11,7 @@ toc: false
     Show that the Haar wavelet transform of a signal of length $N=2^J$ can be computed in $O(N)$ computations.
 
 ??? done "Soln. 5.19"
-    We refer to Section 2.1 in \cite{nason2008wavelet} for readers interested in the pyramidal technique for Haar wavelet transform. Here we give a high level idea on why the time complexity is $O(N)$.
+    We refer to Section 2.1 in [Wavelet Methods in Statistics with R](https://link.springer.com/book/10.1007/978-0-387-75961-6) for readers interested in the pyramidal technique for Haar wavelet transform. Here we give a high level idea on why the time complexity is $O(N)$.
 
 	Given a discrete sequence of data $y=(y_1,y_2,...,y_N)$, without loss of generality, we assume that $N=2^J$ for some integer $J\ge 0$, the pyramidal technique consists of $J$ steps, in each step, we calculate
 	
