--- a/docs/ESL-Solution/6-Kernel-Smoothing-Methods/ex6-09.md
+++ b/docs/ESL-Solution/6-Kernel-Smoothing-Methods/ex6-09.md
@@ -20,4 +20,4 @@ toc: false
 	 
     * When all the variables $X_k$ are discrete, then appropriate histogram estimates can be used.
 	 
-	 On the other hand, parameters are usually estimated by Newton-Raphson methods or backfitting algorithms (e.g., Algorithm 9.1 - 9.2 in the text) for GAM. When all the variables $X_k$ are discrete (e.g., survey response data), it reduces to the so-called *linear multinomial choice model* and parameters can be fit by maximizing the conditional log-likelihood (\cite{ben2018discrete}).
+	 On the other hand, parameters are usually estimated by Newton-Raphson methods or backfitting algorithms (e.g., Algorithm 9.1 - 9.2 in the text) for GAM. When all the variables $X_k$ are discrete (e.g., survey response data), it reduces to the so-called *linear multinomial choice model* and parameters can be fit by maximizing the conditional log-likelihood ([Discrete choice analysis: theory and application to travel demand](https://mitpress.mit.edu/books/discrete-choice-analysis)).
