--- a/docs/ESL-Solution/7-Model-Assessment-and-Selection/ex7-02.md
+++ b/docs/ESL-Solution/7-Model-Assessment-and-Selection/ex7-02.md
@@ -30,7 +30,7 @@ toc: false
 
     the cumulative Gaussian distribution function, This is an increasing function, with value 0 at $t=-\infty$ and value 1 at $t=+\infty$.
 
-	We can think of $\text{sign}(\frac{1}{2}-f(x_0))(E\hat f(x_0) - \frac{1}{2})$ as a kind of *boundary-bias* term, as it depends on the true $f(x_0)$ only through which side of the boundary $(\frac{1}{2})$ that it lies. Notice also that the bias and variance combine in a multiplicative rather than additive fashion. If $E\hat f(x_0)$ is on the same side of $(\frac{1}{2})$, then the bias is negative, and decreasing the variance will decrease the misclassification error. On the other hand, if $E\hat f(x_0)$ is on the opposite side of $(\frac{1}{2})$ to $f(x_0)$, then the bias is positive and it pays to increase the variance! Such an increase will improve the chance that $\hat f(x_0)$ falls on the correct side of $(\frac{1}{2})$ (Friedman, 1997 \cite{friedman1997bias}).
+	We can think of $\text{sign}(\frac{1}{2}-f(x_0))(E\hat f(x_0) - \frac{1}{2})$ as a kind of *boundary-bias* term, as it depends on the true $f(x_0)$ only through which side of the boundary $(\frac{1}{2})$ that it lies. Notice also that the bias and variance combine in a multiplicative rather than additive fashion. If $E\hat f(x_0)$ is on the same side of $(\frac{1}{2})$, then the bias is negative, and decreasing the variance will decrease the misclassification error. On the other hand, if $E\hat f(x_0)$ is on the opposite side of $(\frac{1}{2})$ to $f(x_0)$, then the bias is positive and it pays to increase the variance! Such an increase will improve the chance that $\hat f(x_0)$ falls on the correct side of $(\frac{1}{2})$ ([On bias, variance, 0/1—loss, and the curse-of-dimensionality](https://link.springer.com/article/10.1023/A:1009778005914)).
 
 ??? done "Soln. 7.2"
     First consider the case when $f(x_0) \ge 1/2$, we have $G(x_0) = 1$, and  
