--- a/docs/ESL-Solution/8-Model-Inference-and-Averaging/ex8-5.md
+++ b/docs/ESL-Solution/8-Model-Inference-and-Averaging/ex8-5.md
@@ -12,7 +12,7 @@ toc: false
     Suggest generalizations of each of the loss functions in Figure 10.4 to more than two classes, and design an appropriate plot to compare them.
 
 ??? done "Soln. 8.5"
-    Following the idea of \cite{hastie2009multi} (see [Ex. 10.5](../_10-Boosting-and-Additive-Trees/ex10-05.md) as well),  for a $K$-class classification problem, consider the coding $Y=(Y_1,...,Y_K)^T$ with
+    Following the idea of [Multi-class adaboost](https://hastie.su.domains/Papers/samme.pdf) (see [Ex. 10.5](../_10-Boosting-and-Additive-Trees/ex10-05.md) as well),  for a $K$-class classification problem, consider the coding $Y=(Y_1,...,Y_K)^T$ with
 	
     \begin{equation}
 		Y_k = \begin{cases}
